--- a/documentation.html
+++ b/documentation.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Documentation</title>
-</head>
-<body>
-    <h1> Marvel Movies API</h1>
-    <p>This API shows you every Marvel movie (TV shows not included for now) and its information.</p>
-</body>
+  </head>
+  <body>
+    <h1>Marvel Movies API</h1>
+    <p>
+      This API shows you every Marvel movie (TV shows not included for now) and
+      its information.
+    </p>
+  </body>
 </html>
+t
