--- a/public/documentation.html
+++ b/public/documentation.html
@@ -8,9 +8,10 @@
   <body>
     <h1>Marvel Movies API</h1>
     <p>
-      This API shows you every Marvel movie (TV shows not included for now) and
-      its information.
+      This API shows you every Marvel movie in Release Order (TV shows not
+      included for now) and its information.
+      <br />
+      So far only then first 10, more coming!
     </p>
   </body>
 </html>
-t
