removed duplicate /movies endpoint, updated post and delete endpoints to include more specificity

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -131,7 +131,7 @@
         </tr>
         <tr>
           <td>Allow users to add a movie to their list of favorites</td>
-          <td>/users/:id/:movieTitle</td>
+          <td>/users/:id/movies/:movieTitle</td>
           <td>POST</td>
           <td>None</td>
           <td>
@@ -140,7 +140,7 @@
         </tr>
         <tr>
           <td>Allow users to remove a movie from their list of favorites</td>
-          <td>/users/:id/:movieTitle</td>
+          <td>/users/:id/movies/:movieTitle</td>
           <td>DELETE</td>
           <td>None</td>
           <td>
