/login endpoint added to documentation.html

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -101,6 +101,15 @@
           </td>
         </tr>
         <tr>
+          <td>Allow existing users to log in</td>
+          <td>/login</td>
+          <td>POST</td>
+          <td>Username and password params</td>
+          <td>     
+            A message returning if there was a problem logging in
+          </td>
+        </tr>
+        <tr>
           <td>Allow new users to create a profile</td>
           <td>/users</td>
           <td>POST</td>
