--- a/public/documentation.html
+++ b/public/documentation.html
@@ -141,7 +141,7 @@
           </td>
         </tr>
         <tr>
-          <td>Allow users to update their user name</td>
+          <td>Allow users to update their user data</td>
           <td>/users/:username</td>
           <td>PUT</td>
           <td>
