fixed endpoints for directors and genres

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -65,7 +65,7 @@
         </tr>
         <tr>
           <td>Return data about a single movie's genre by movie title</td>
-          <td>/movies/genre/:genreName</td>
+          <td>/movies/genres/:genreName</td>
           <td>GET</td>
           <td>None</td>
           <td>
@@ -82,7 +82,7 @@
         </tr>
         <tr>
           <td>Return data about a director by name</td>
-          <td>/movies/director/:directorName</td>
+          <td>/movies/directors/:directorName</td>
           <td>GET</td>
           <td>None</td>
           <td>
