fixed JSON syntax in docs examples

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -39,27 +39,27 @@
             <code>
               { <br />
 
-              _id: ObjectId('66529cb5816f90f3004bd561'), <br />
-              title: 'Iron Man', <br />
-              release: '2008', <br />
-              director: { <br />
-              name: 'Jon Favreau', <br />
-              bio: 'Jonathan Kolia Favreau is an American filmmaker and actor,
+              "_id": "ObjectId('66529cb5816f90f3004bd561')", <br />
+              "title": "Iron Man", <br />
+              "release": "2008", <br />
+              "director": { <br />
+              "name": "Jon Favreau", <br />
+              "bio": "Jonathan Kolia Favreau is an American filmmaker and actor,
               well known for his directorial and acting credits in multple films
-              within the Marvel Cinematic Universe.', <br />
-              birth: '1966-10-19', <br />
-              death: '' <br />
+              within the Marvel Cinematic Universe.", <br />
+              "birth": "1966-10-19", <br />
+              "death": "" <br />
               }, <br />
-              length: '2h 6m', <br />
-              genre: { <br />
-              name: 'comedy', <br />
-              description: 'Comedy is a film genre that emphasizes humor. These
+              "length": "2h 6m", <br />
+              "genre": { <br />
+              "name": "Comedy", <br />
+              "description": "Comedy is a film genre that emphasizes humor. These
               films are designed to amuse audiences and make them laugh. Films
-              in this genre typically have a happy ending.' <br />
+              in this genre typically have a happy ending." <br />
               }, <br />
-              description: 'After being held captive in an Afghan cave,
+              "description": "After being held captive in an Afghan cave,
               billionaire engineer Tony Stark creates a unique weaponized suit
-              of armor to fight evil.' }
+              of armor to fight evil." }
             </code>
           </td>
         </tr>
@@ -71,11 +71,11 @@
           <td>
             A JSON object holding data about a genre, ex: <br />
             <code>
-              genre: { <br />
-              name: 'comedy', <br />
-              description: 'Comedy is a film genre that emphasizes humor. These
+              "genre": { <br />
+              "name": "Comedy", <br />
+              "description": "Comedy is a film genre that emphasizes humor. These
               films are designed to amuse audiences and make them laugh. Films
-              in this genre typically have a happy ending.' <br />
+              in this genre typically have a happy ending." <br />
               }
             </code>
           </td>
@@ -89,13 +89,13 @@
             A JSON object holding data about a director, ex: <br />
             <code>
               <br />
-              director: { <br />
-              name: 'Jon Favreau', <br />
-              bio: 'Jonathan Kolia Favreau is an American filmmaker and actor,
+              "director": { <br />
+              "name": "Jon Favreau", <br />
+              "bio": "Jonathan Kolia Favreau is an American filmmaker and actor,
               well known for his directorial and acting credits in multple films
-              within the Marvel Cinematic Universe.', <br />
-              birth: '1966-10-19', <br />
-              death: '' <br />
+              within the Marvel Cinematic Universe.", <br />
+              "birth": "1966-10-19", <br />
+              "death": '' <br />
               }</code
             >
           </td>
@@ -116,10 +116,10 @@
             <br />
             <code>
               { <br />
-              username: 'kramer', <br />
-              password: 'ye-ow', <br />
-              email: 'cosmo@mail.jk', <br />
-              birthday: '1975-11-19' <br />
+              "username": "kramer", <br />
+              "password": "ye-ow", <br />
+              "email": "cosmo@mail.jk", <br />
+              "birthday": "1975-11-19" <br />
               <br />
               }
             </code>
@@ -129,11 +129,11 @@
             along with a unique ObjectID, ex: <br />
             <code>
               { <br />
-              _id: ObjectId('6652aa94816f90f3004bd56d'), <br />
-              username: 'kramer', <br />
-              password: 'ye-ow', <br />
-              email: 'cosmo@mail.jk', <br />
-              birthday: '1975-11-19', <br />
+              "_id": "ObjectId("6652aa94816f90f3004bd56d")", <br />
+              "username": "kramer", <br />
+              "password": "ye-ow", <br />
+              "email": "cosmo@mail.jk", <br />
+              "birthday": "1975-11-19", <br />
               }
             </code>
           </td>
@@ -147,7 +147,7 @@
             <br />
             <code>
               { <br />
-              "username": "joe updated name" <br />
+              "username": "joe-updated-name" <br />
               }
             </code>
           </td>
@@ -156,8 +156,8 @@
             <br />
             <code>
               { <br />
-              _id: ObjectId('6652aa94816f90f3004bd56d'), <br />
-              "username": "joe updated name", <br />
+              "_id": "ObjectId('6652aa94816f90f3004bd56d')", <br />
+              "username": "joe-updated-name", <br />
               "email": "joey@joetown.ca" <br />
               }
             </code>
@@ -174,8 +174,8 @@
             <br />
             <code>
               { <br />
-              _id: ObjectId('6652aa94816f90f3004bd56d'), <br />
-              "username": "joe updated name", <br />
+              "_id": "ObjectId('6652aa94816f90f3004bd56d')", <br />
+              "username": "joe-updated-name", <br />
               "email": "joey@joetown.ca" <br />
               "favMovies": ["6652a205816f90f3004bd567"] <br />
               }
@@ -193,10 +193,10 @@
             <br />
             <code>
               { <br />
-              _id: ObjectId('6652aa94816f90f3004bd56d'), <br />
+              "_id": "ObjectId('6652aa94816f90f3004bd56d')", <br />
               "username": "joe updated name", <br />
               "email": "joey@joetown.ca" <br />
-              "favMovies: []" <br />
+              "favMovies": [] <br />
               }
             </code>
           </td>
